--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,6 +19,10 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+    twig.exception_listener:
+        class: CompareController
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+   
