--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ APP_SECRET=dd4df54dd0d399899d6350a80299f9a1
  DATABASE_URL="mysql://root@127.0.0.1:3306/database_web?serverVersion=mariadb-10.4.8&charset=utf8mb4"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
