--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,6 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+   path: /
+   controller: App\Controller\HomeController::reindex
 home:
     path: /home
     controller: App\Controller\HomeController::index
